fix broken style issues

--- a/pages/styles/tailwind.css
+++ b/pages/styles/tailwind.css
@@ -131,6 +131,10 @@
   display: flex
 }
 
+.inline-flex {
+  display: inline-flex
+}
+
 .table {
   display: table
 }
@@ -141,10 +145,6 @@
 
 .h-12 {
   height: 3rem
-}
-
-.h-4 {
-  height: 1rem
 }
 
 .h-6 {
@@ -215,10 +215,6 @@
   --tw-scale-x: 1.5;
   --tw-scale-y: 1.5;
   transform: var(--tw-transform)
-}
-
-.cursor-pointer {
-  cursor: pointer
 }
 
 .grid-cols-3 {
@@ -433,6 +429,11 @@
 
 .opacity-50 {
   opacity: 0.5
+}
+
+.blur {
+  --tw-blur: blur(8px);
+  filter: var(--tw-filter)
 }
 
 .filter {
